--- a/.gitconfig
+++ b/.gitconfig
@@ -8,3 +8,8 @@
 	autoSetupRemote = true
 [gpg]
 	program = gpg2
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge --skip -- %f
+	process = git-lfs filter-process --skip
+	required = true
