--- a/.config/i3/config
+++ b/.config/i3/config
@@ -167,8 +167,8 @@ bindsym $mod+v exec pavucontrol
 bindsym $mod+m exec speedcrunch
 
 # Screenshot shortcuts
-bindsym $mod+Print exec maim $(date +$(xdg-user-dir PICTURES)/Screenshot_%Y-%m-%d_%H%M%S.png)
-bindsym $mod+Shift+Print exec maim -s $(date +$(xdg-user-dir PICTURES)/Screenshot_%Y-%m-%d_%H%M%S.png)
+bindsym $mod+Print exec maim $(date +$(xdg-user-dir PICTURES)/Screenshots/Screenshot_%Y-%m-%d_%H%M%S.png)
+bindsym $mod+Shift+Print exec maim -s $(date +$(xdg-user-dir PICTURES)/Screenshots/Screenshot_%Y-%m-%d_%H%M%S.png)
 bindsym $mod+Shift+s exec maim -s | xclip -selection clipboard -t image/png
 
 # Always floating
