--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 # Set C-a as prefix
-set -g prefix C-a
+set -g prefix C-Space
 unbind C-b
-bind C-a send-prefix
+bind C-Space send-prefix
 
 # Terminal
 set -g default-terminal "tmux-256color"
