--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-# Set C-a as prefix
+# Set C-Space as prefix
 set -g prefix C-Space
 unbind C-b
 bind C-Space send-prefix
@@ -6,8 +6,6 @@ bind C-Space send-prefix
 # Terminal
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256color*:Tc"
-
-set -g status off
 
 set -g mouse on
 
