--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,9 @@ bind C-Space send-prefix
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256color*:Tc"
 
-set -g mouse on
+# Numbering starts from 1
+set -g base-index 1
 
+# Desktop features
+set -g mouse on
 set -g set-clipboard on
