--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,6 +9,7 @@ set -ga terminal-overrides ",*256color*:Tc"
 
 # Numbering starts from 1
 set -g base-index 1
+set -g renumber-windows on
 
 # Desktop features
 set -g mouse on
