--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,7 +7,7 @@ bind C-Space send-prefix
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256color*:Tc"
 
-# Numbering starts from 1
+# Window numbering
 set -g base-index 1
 set -g renumber-windows on
 
