--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,7 @@ bind C-Space send-prefix
 # Terminal
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256color*:Tc"
+set -ga terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 
 # Window numbering
 set -g base-index 1
