--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,3 +15,9 @@ set -g renumber-windows on
 # Desktop features
 set -g mouse on
 set -g set-clipboard on
+
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+
+run '~/.tmux/plugins/tpm/tpm'
