--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,3 +21,4 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 
 run '~/.tmux/plugins/tpm/tpm'
+# git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
