vim: Add <C-W> mappings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,10 +7,17 @@ bind C-Space send-prefix
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256color*:Tc"
 set -ga terminal-overrides ',*:Smulx=\E[4::%p1%dm'
+set -g extended-keys on
 
 # Window numbering
 set -g base-index 1
 set -g renumber-windows on
+
+# Pane movement with vim keys
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 # Desktop features
 set -g mouse on
