tmux: fixes, wezterm revert kitty kbd

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,6 +9,10 @@ set -ga terminal-overrides ",*256color*:Tc"
 set -ga terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 set -g extended-keys on
 
+# Fixes
+set -s escape-time 50
+set -g status-keys emacs
+
 # Window numbering
 set -g base-index 1
 set -g renumber-windows on
