vim: Focus termcodes, tmux: enable focus-events

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,7 @@ set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256color*:Tc"
 set -ga terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 set -g extended-keys on
+set -g focus-events on
 
 # Fixes
 set -s escape-time 50
