kitty: filter CR and local config

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -4,6 +4,9 @@ font_family		Iosevka Term
 # Speed up scrolling for touchpad
 touch_scroll_multiplier 10.0
 
+# Remove <CR>'s via filter
+paste_actions quote-urls-at-prompt,filter,confirm
+
 # Disable bell
 enable_audio_bell no
 
@@ -16,3 +19,6 @@ map kitty_mod+p>u kitten hints --program @
 # Gruvbox theme
 # Download the theme with `kitty +kitten themes`
 include Gruvbox Dark.conf
+
+# Local config
+include kitty.local.conf
