kitty: enable trail, show tabs, disable cursor lig
Remove unneeded shortcut

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,5 +1,10 @@
 # Font
 font_family		Iosevka Term
+disable_ligatures cursor
+
+# Cursor
+cursor_trail 50
+cursor_trail_decay 0.1 0.2
 
 # Speed up scrolling for touchpad
 touch_scroll_multiplier 10.0
@@ -10,11 +15,12 @@ paste_actions quote-urls-at-prompt,filter,confirm
 # Disable bell
 enable_audio_bell no
 
+# Always show tab bar
+tab_bar_min_tabs 1
+
 # Shortcuts
 # Open cwd in new tab
 map kitty_mod+f3 launch --cwd=current --type=tab
-# Copy link to clipboard
-map kitty_mod+p>u kitten hints --program @
 
 # Gruvbox theme
 # Download the theme with `kitty +kitten themes`
