sway launch 1 instance kitty, git no personal sshC

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -14,7 +14,7 @@ font pango:DejaVu Sans Mono 9
 floating_modifier $mod
 
 # Terminal - kitty
-bindsym $mod+Return exec kitty
+bindsym $mod+Return exec kitty -1
 
 # Launcher - fuzzel
 bindsym $mod+d exec fuzzel -T kitty
